--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
     "lodash": "^4.17.11",
     "mason-library": "^3.2.8",
     "react": "^16.6.3",
+    "react-activity-feed": "^0.9.4",
     "react-dom": "^16.6.3",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.1",
+    "react-sticky": "^6.0.3",
     "recompose": "^0.30.0"
   },
   "scripts": {
