--- a/package.json
+++ b/package.json
@@ -3,18 +3,22 @@
   "version": "0.2.0",
   "private": true,
   "dependencies": {
-    "@mason-api/react-sdk": "^3.4.0",
+    "bootstrap": "^4.4.1",
     "build": "^0.1.4",
-    "firebase": "^5.10.1",
-    "lodash": "^4.17.11",
-    "react": "^16.6.3",
-    "react-activity-feed": "^0.9.4",
+    "firebase": "^5.11.1",
+    "fsevents": "^2.1.2",
+    "jquery": "^3.4.1",
+    "lodash": "^4.17.15",
+    "popper": "^1.0.1",
+    "react": "^16.12.0",
+    "react-activity-feed": "^0.9.24",
+    "react-bootstrap": "^1.0.0-beta.17",
     "react-data-grid": "^6.1.0",
-    "react-dom": "^16.6.3",
+    "react-dom": "^16.12.0",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^2.1.1",
+    "react-scripts": "^2.1.8",
     "react-sticky": "^6.0.3",
-    "react-typeform-embed": "^0.2.0",
+    "react-typeform-embed": "^0.2.1",
     "recompose": "^0.30.0"
   },
   "scripts": {
